Refactor lesson.html for improved structure and clarity

--- a/lesson.html
+++ b/lesson.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Lesson | PathLift</title>
+
   <link rel="stylesheet" href="assets/styles.css" />
   <script defer src="assets/lessons.js"></script>
   <script defer src="assets/main.js"></script>
 </head>
-<body>
-  <a href="#main" class="skip-link">Skip to content</a>
 
+<body>
   <header class="header">
     <div class="container nav">
       <a class="brand" href="index.html">
@@ -26,73 +26,66 @@
     </div>
   </header>
 
-  <main id="main" class="section">
+  <main class="section">
     <div class="container card">
-      <h1 id="lessonTitle">Lesson</h1>
-      <p class="muted" id="lessonTrack"></p>
-
+      <h1 id="lessonTitle"></h1>
       <ol id="steps" class="space-md"></ol>
 
       <div class="space-md">
-        <label for="reflection"><strong>Reflection</strong></label>
-        <textarea id="reflection" rows="4" placeholder="Write your thoughts here (stays on this device only)."></textarea>
+        <label><strong>Reflection</strong></label>
+        <textarea id="reflection" rows="4"></textarea>
       </div>
 
       <div class="space-md">
-        <button class="btn" id="completeBtn">Mark lesson complete</button>
+        <button class="btn" id="completeBtn">Mark complete</button>
         <button class="btn secondary" id="quizBtn">Take quiz</button>
-        <button class="btn secondary" onclick="window.location.href='learn.html'">Back to dashboard</button>
       </div>
     </div>
   </main>
 
   <script>
-    Pathlift.requireUser();
+    document.addEventListener("DOMContentLoaded", () => {
+      const lessonId = Pathlift.getCurrentLessonId();
+      if (!lessonId) return window.location.href = "learn.html";
 
-    const lessonId = Pathlift.getCurrentLessonId();
-    if (!lessonId) window.location.href = "learn.html";
+      let lesson = null;
 
-    let currentLesson = null;
-    let currentTrack = null;
-
-    for (const track of PATHLIFT_TRACKS) {
-      const found = track.lessons.find(l => l.id === lessonId);
-      if (found) {
-        currentLesson = found;
-        currentTrack = track;
-        break;
+      // Find lesson by simple ID
+      for (const track of PATHLIFT_TRACKS) {
+        const found = track.lessons.find(l => l.id === lessonId);
+        if (found) lesson = found;
       }
-    }
 
-    if (!currentLesson) window.location.href = "learn.html";
+      if (!lesson) {
+        alert("Lesson not found.");
+        return window.location.href = "learn.html";
+      }
 
-    document.getElementById("lessonTitle").textContent = currentLesson.title;
-    document.getElementById("lessonTrack").textContent = currentTrack.name;
+      document.getElementById("lessonTitle").textContent = lesson.title;
 
-    const stepsList = document.getElementById("steps");
-    currentLesson.steps.forEach((step, index) => {
-      const li = document.createElement("li");
-      li.textContent = step;
-      stepsList.appendChild(li);
-    });
+      const stepsList = document.getElementById("steps");
+      lesson.steps.forEach(step => {
+        const li = document.createElement("li");
+        li.textContent = step;
+        stepsList.appendChild(li);
+      });
 
-    const reflectionBox = document.getElementById("reflection");
-    const reflectionKey = "pathliftReflection_" + lessonId;
-    const savedReflection = localStorage.getItem(reflectionKey);
-    if (savedReflection) reflectionBox.value = savedReflection;
+      const reflectionBox = document.getElementById("reflection");
+      const key = "reflection_" + lessonId;
+      reflectionBox.value = localStorage.getItem(key) || "";
+      reflectionBox.addEventListener("input", () => {
+        localStorage.setItem(key, reflectionBox.value);
+      });
 
-    reflectionBox.addEventListener("input", () => {
-      localStorage.setItem(reflectionKey, reflectionBox.value);
-    });
+      document.getElementById("completeBtn").addEventListener("click", () => {
+        Pathlift.markLessonComplete(lessonId);
+        alert("Lesson marked complete!");
+      });
 
-    document.getElementById("completeBtn").addEventListener("click", () => {
-      Pathlift.markLessonComplete(lessonId);
-      alert("Nice work. Lesson marked as complete on this device.");
-    });
-
-    document.getElementById("quizBtn").addEventListener("click", () => {
-      Pathlift.setCurrentQuiz(lessonId);
-      window.location.href = "quiz.html";
+      document.getElementById("quizBtn").addEventListener("click", () => {
+        Pathlift.setCurrentQuiz(lessonId);
+        window.location.href = "quiz.html";
+      });
     });
   </script>
 </body>
